--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -15,7 +15,7 @@ enableEmoji = true
 author = "Riad Hassan"
 description = "It is for sharing notes"
 keywords = "teaching, sharing note"
-info = ["Love to learn", "Magician"]
+info = ["Love to learn"]
 avatarURL = "images/riad.jpg"
 #gravatar = "john.doe@example.com"
 footerContent = "Learing is the power"
@@ -101,21 +101,27 @@ author = "authors"
 
 [[params.social]]
 name = "Github"
-icon = "fa fa-github"
+icon = "fab fa-github"
 weight = 1
 url = "https://github.com/riadhassan/"
 
 [[params.social]]
 name = "LinkedIn"
-icon = "fa fa-linkedin"
+icon = "fab fa-linkedin"
 weight = 4
 url = "https://www.linkedin.com/in/riadhassan/"
 
 [[params.social]]
-name = "LinkedIn"
-icon = "fa fa-facebook"
+name = "Facebook"
+icon = "fab fa-facebook-square"
 weight = 4
-url = "https://www.linkedin.com/in/riadhassan/"
+url = "https://www.facebook.com/RiadHa2san/"
+
+[[params.social]]
+name = "Email"
+icon = "fas fa-envelope"
+weight = 4
+url = "mailto:riad_hassan@outlook.com"
 
 [languages.en]
 languageName = ":uk:"
