--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -106,6 +106,12 @@ weight = 1
 url = "https://github.com/riadhassan/"
 
 [[params.social]]
+name = "Github"
+icon = "fa fa-globe"
+weight = 1
+url = "https://riadhassan.com/"
+
+[[params.social]]
 name = "LinkedIn"
 icon = "fa fa-linkedin"
 weight = 2
